Fixed margin spacing for education

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ body {
     padding: 0;
     margin: 0;
     list-style: none;
+    margin-bottom: 20px;
 }
 
 .education ul li {
